Closed Bug 353873 Opened 19 years ago Closed 19 years ago

Checkin for bug 344323 broke OS/2 build

Categories

(Core Graveyard :: Widget: OS/2, defect)

Other
OS/2
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wuno, Assigned: mkaply)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9a1) Gecko/20060922 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9a1) Gecko/20060922 Minefield/3.0a1 Due to check-in of bug344323 OS/2 build is broken in nsScreenManagerOS2.cpp (as also gtk was). I guess OS/2 default is having only one screen (am I right?). I'd suggest to handle it like vlad did with gtk or Mac, solution would be not_implemented. Patch according to vlad's patches to follow. Reproducible: Always
You should ask Vlad to just check this in as a bustage fix.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: checkin for bug344323 broke OS/2 build → Checkin for bug 344323 broke OS/2 build
Andy, Mike, Peter could you confirm (or not) that the suggested fix is the proper solution for OS/2
vlad got confirmation from the mailinglist that it would be ok to check the bustage fix in, could you please do it I have no rights to do so, thanks
Attachment #239710 - Flags: review?(vladimir)
checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: