bug 353873 - build bustage