widget/src/os2/nsScreenManagerOS2.cpp
@@ -124,3 +124,8 @@ nsScreenManagerOS2 :: GetNumberOfScreens(PRUint32 *aNumberOfScreens)
   
 } // GetNumberOfScreens
 
+NS_IMETHODIMP
+nsScreenManagerOS2 :: ScreenForNativeWidget(void *nativeWidget, nsIScreen **aScreen)
+{
+  return NS_ERROR_NOT_IMPLEMENTED;
+}
